# shelly-rpc

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  KNOWN_ISSUES.md  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release.yml  wait-for-copilot.yml
scripts/: appliance-monitor.js  bathroom-fan.js  datadog-telemetry.js  powerstrip-telemetry.js
shelly-rpc/: Cargo.toml
shelly-rpc/src/: cloud.rs  device.rs  error.rs  lib.rs  util.rs
shelly-rpc/src/rpc/: common.rs  cover.rs  input.rs  light.rs  mod.rs  script.rs  sensors.rs  shelly.rs  switch.rs  sys.rs  wifi.rs
shelly-rpc/tests/: fixture_compat.rs  rpc_parsers.rs
shelly-rpc/tests/fixtures/PowerStrip/: BLE.GetConfig.json  BTHome.GetStatus.json  Cloud.GetConfig.json  Cloud.GetStatus.json  KNX.GetConfig.json  Matter.GetStatus.json  Mqtt.GetConfig.json  POWERSTRIP_UI.GetConfig.json  Shelly.GetConfig.json  Shelly.GetDeviceInfo.json  Shelly.GetStatus.json  Shelly.ListMethods.json  Switch.GetConfig_0.json  Switch.GetConfig_1.json  Switch.GetConfig_2.json  Switch.GetConfig_3.json  Switch.GetStatus_0.json  Switch.GetStatus_1.json  Switch.GetStatus_2.json  Switch.GetStatus_3.json  Sys.GetConfig.json  Sys.GetStatus.json  WS.GetConfig.json  Wifi.GetConfig.json  Wifi.GetStatus.json
shellyctl/: Cargo.toml  build.rs
shellyctl/src/: main.rs  minify.rs  nal.rs  self_update.rs
shellyctl/src/cloud/: auth.rs  helpers.rs  mod.rs
