[package]
name = "shellyctl"
description = "Command-line client for Shelly smart devices, built on shelly-rpc."
categories = ["command-line-utilities"]
keywords = ["shelly", "iot", "smart-home", "cli"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[[bin]]
name = "shellyctl"
path = "src/main.rs"

[dependencies]
shelly-rpc = { workspace = true }
embedded-io = { version = "0.7", features = ["std"] }
embedded-io-async = "0.7"
embedded-nal-async = "0.9"
tokio = { version = "1", features = ["rt", "macros", "net", "io-util", "signal"] }
mdns-sd = { version = "0.19", default-features = false }
base64 = "0.21"
ureq = "2"
url = "2"
axoupdater = { version = "0.10", default-features = false, features = ["blocking", "github_releases"] }

# SWC-based JS minifier (proper parser + scope-aware identifier mangling).
# Targets ES5 output because Mongoose JS on-device is ES5.1-ish: no arrow
# functions, no template literals, etc.
swc_common = "21"
swc_ecma_ast = "23"
swc_ecma_codegen = "26"
swc_ecma_minifier = { version = "52", default-features = false }
swc_ecma_parser = "39"
swc_ecma_transforms_base = "42"
# block_scoping (let/const → var) and arrow conversion. Without this,
# the minifier passes ES2015+ declarations through unchanged and the
# device's Mongoose JS engine refuses to load the script.
swc_ecma_compat_es2015 = "46"

[dev-dependencies]
serde_json = "1"
